REFACTOR: 강의 동기화 스케줄러 LocalDateTime 적용 및 코드 개선
- `Date` 대신 `LocalDateTime` 사용하여 최신 강의 동기화 로직 개선
- `convertToDocument` 메서드 생성하여 코드 모듈화 및 가독성 향상
- `tags` 필드를 `List<String>` 형태로 변환하여 데이터 정규화
- 스케줄링 간격을 `매 정각 0분`으로 변경 (`0 0 * * * ?`)

jira ref: #S12P11A209-40